--- a/client/src/app/forms2/types/evidence-select/evidence-manager/evidence-manager.component.less
+++ b/client/src/app/forms2/types/evidence-select/evidence-manager/evidence-manager.component.less
@@ -1,1 +1,8 @@
 @import 'themes/overrides/card-table.overrides.less';
+
+tr.data-row td:first-of-type {
+  padding-left: 6px;
+  cvc-entity-tag {
+    margin-left: 6px;
+  }
+}
